@@ -1,0 +1,23 @@
+<?php
+
+/**
+ * @package POT
+ * @version 0.2.0+SVN
+ * @since 0.2.0+SVN
+ * @author Wrzasq <wrzasq@gmail.com>
+ * @copyright 2007 (C) by Wrzasq
+ * @license http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License, Version 3
+ */
+
+/**
+ * Occurs when code attempts to fetch cache which does not exist.
+ * 
+ * @package POT
+ * @version 0.2.0+SVN
+ * @since 0.2.0+SVN
+ */
+class E_OTS_NoCache extends Exception
+{
+}
+
+?>
