@@ -22,12 +22,12 @@
     <refsect1 id="{@id interface}">
         <title>Driver interface</title>
         <para>
-        Cache handler class must implement {@link IOTS_FileCache IOTS_FileCache interface}. It defines two methods - for {@link IOTS_FileCache::readCache() reading} and {@link IOTS_FileCache::writeCache() writing} cache. readCache() method takes one parameter - MD5 checksum of file to identify cache signature. Returns root node of cached content (entire file content should be bound with children and siblings) or null if cache doesn't exist. writeCache() method takes MD5 sum as first parameter and {@link OTS_FileNode root node} as second parameter and saves it with given sum signature.
+        Cache handler class must implement {@link IOTS_FileCache IOTS_FileCache interface}. It defines three methods - for {@link IOTS_FileCache::hasCache() checking},  {@link IOTS_FileCache::readCache() reading} and {@link IOTS_FileCache::writeCache() writing} cache. hasCache() and readCache() methods take one parameter - MD5 checksum of file to identify cache signature. First returns  state whether cache for given file exists or not. Second returns root node of cached content (entire file content should be bound with children and siblings) or throws {@link E_OTS_NoCache E_OTS_NoCache exception} if cache doesn't exist. writeCache() method takes MD5 sum as first parameter and {@link OTS_FileNode root node} as second parameter and saves it with given sum signature.
         </para>
         <refsect2 id="{@id items}">
             <title>Items cache</title>
             <para>
-            Another problem with file-based resources are items - items definitions files (items.xml) is also usualy very big and contains many item elements. For items there are additional methods declared in extended {@link IOTS_ItemsCache cache driver interface} - {@link IOTS_ItemsCache::readItems() readItems()} and {@link IOTS_ItemsCache::writeItems() writeItems()}. They handle only items.xml cache saving. It means that your cache driver must separately implement caching mechanism for binary formats.
+            Another problem with file-based resources are items - items definitions files (items.xml) is also usualy very big and contains many item elements. For items there are additional methods declared in extended {@link IOTS_ItemsCache cache driver interface} - {@link IOTS_ItemsCache::hasItems() hasItems()}, {@link IOTS_ItemsCache::readItems() readItems()} and {@link IOTS_ItemsCache::writeItems() writeItems()}. They handle only items.xml cache saving. It means that your cache driver must separately implement caching mechanism for binary formats.
             </para>
             <para>
             Note that you can assign basic {@link IOTS_FileCache IOTS_FileCache driver} to items list - then simply only binary content will be handled by cache, XML part will not be affected by cache.
@@ -37,7 +37,7 @@
     <refsect1 id="{@id example}">
         <title>Example</title>
         <para>
-        Cache can be stored in many ways - temporarily in session, or in some more constant ways - in SQL database, in text files, in some exported format... it's your way how to handle those mechanisms and how to code cache loading/saving methods. Here is very simple driver that stores everything in PHP notation in text file - it is very uneffective, but it's just an example to show how this all works: {@example examples/cache.php}
+        Cache can be stored in many ways - temporarily in session, or in some more constant ways - in SQL database, in text files, in some exported format… it's your way how to handle those mechanisms and how to code cache loading/saving methods. Here is very simple driver that stores everything in PHP notation in text file - it is very uneffective, but it's just an example to show how this all works: {@example examples/cache.php}
         </para>
     </refsect1>
 </refentry>
