@@ -59,7 +59,7 @@
         </para>
         <itemizedlist>
             <listitem>Wrzasq - it's me :P.</listitem>
-            <listitem>Tliff - he had an idea...</listitem>
+            <listitem>Tliff - he had an idea…</listitem>
             <listitem>Yorick, Nuker, Verkon - very friendly {@link http://otfans.net/ OTFans} admins :).</listitem>
             <listitem>GriZzm0 - he is very handy for information exchange ;).</listitem>
             <listitem>Pekay - don't know why, just feel that he should be on list ;).</listitem>
